Se agrego navbar
Se agrego en navbar junto al logo de la universidad

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav class="nav">
+        <div class="nav-brand"><img src="ucsc.png" alt=""></div>
+        <ol class="nav-links">
+        </ol>
+    </nav>  
 </body>
 </html>
