--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="nav-brand"><img src="ucsc.png" alt=""></div>
-        <ol class="nav-links">
+        <div class="nav-brand"><img src="/Imagenes/ucsc.png" alt=""></div>
+        <ol class="nav-links">    
+            <form action="comprobador.php" method="POST">
+                <li><input type="text" placeholder= "Usuario" class="cuenta"></li>
+                <li><input type="password" placeholder= "Contraseña" class="cuenta"></li> 
+                <li><button type="submit" class="boton_ingresar">Ingresar</button></li>
+            </form>
         </ol>
     </nav>  
 </body>
